# symptomSense

./: .env.example  .gitignore  DEPLOYABLE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_TESTING_STATUS.md  IMPROVEMENT_PLAN.md  INDEX.md  Makefile  QUICKSTART.md  README.md  READY_FOR_DEMO.md  RESOURCES.md  STATUS.md  TECHNICAL_SUMMARY.md  TESTING_GUIDE.md  VALIDATION_REPORT.md  requirements.txt
backend/: README.md  mypy.ini  pyproject.toml  ruff.toml
backend/app/: main.py
backend/app/agents/: agent_combine.py  graph.py
backend/app/core/: errors.py  logging.py  settings.py
backend/app/models/: dto.py  schema.py
backend/app/routers/: health.py  process_input.py  stt.py  tts.py
backend/app/services/: brave_search_service.py  confidence_service.py  docling_service.py  hitl_service.py  image_service.py  nlg_service.py  rag_service.py  stt_service.py  tts_service.py
backend/app/storage/: files.py  qdrant_client.py
backend/app/telemetry/: metrics.py  tracing.py
backend/data/hitl_queue/: hitl_20251026_134320_127804.json  hitl_20251026_140927_803442.json  hitl_20251026_142936_966725.json  hitl_20251026_152352_208057.json  hitl_20251026_152554_783297.json  hitl_20251026_152849_989054.json  hitl_20251026_153208_443955.json  hitl_20251026_171104_965482.json  hitl_20251026_171256_685223.json  hitl_20251026_172033_907666.json  hitl_20251026_172345_084825.json  hitl_20251026_173013_396177.json  hitl_20251026_181429_609954.json  hitl_20251026_181646_031902.json  (+6 more)
backend/tests/: conftest.py  test_agents.py  test_routes.py  test_services.py
data/: .gitignore
(+30 files in other folders)
